2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	GOP support. Based on patch from Bean
	(http://lists.gnu.org/archive/html/grub-devel/2009-08/msg00384.html)

	* video/efi_gop.c: New file.
	* include/grub/efi/graphics_output.h: Likewise.
	* conf/i386-efi.rmk (pkglib_MODULES): Add `efi_gop.mod'.
	(efi_fb_mod_SOURCES, efi_fb_mod_CFLAGS, efi_fb_mod_LDFLAGS): New
	variables.
	* conf/x86_64-efi.rmk: Likewise.

2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Rename efi_fb to efi_uga.

	* conf/i386-efi.rmk (pkglib_MODULES): Rename 'efi_fb.mod' to
	'efi_uga.mod'.
	(efi_fb_mod_SOURCES): Rename this ...
	(efi_uga_mod_SOURCES): ... to this.
	(efi_fb_mod_CFLAGS): Rename this ...
	(efi_uga_mod_CFLAGS): ... to this.
	(efi_fb_mod_LDFLAGS): Rename this ...
	(efi_uga_mod_LDFLAGS): ... to this.
	* conf/x86_64-efi.rmk (pkglib_MODULES): Rename 'efi_fb.mod' to
	'efi_uga.mod'.
	(efi_fb_mod_SOURCES): Rename this ...
	(efi_uga_mod_SOURCES): ... to this.
	(efi_fb_mod_CFLAGS): Rename this ...
	(efi_uga_mod_CFLAGS): ... to this.
	(efi_fb_mod_LDFLAGS): Rename this ...
	(efi_uga_mod_LDFLAGS): ... to this.
	* video/efi_fb.c: Move this ...
	* video/efi_uga.c: ... to this. Change prefix to 'grub_video_uga_'.

2009-11-27  Robert Millan  <rmh.grub@aybabtu.com>

	* po/README: New file.  Explain our PO file workflow.

2009-11-27  Robert Millan  <rmh.grub@aybabtu.com>

	* po/ChangeLog: Remove.  Move relevant entries back to ...
	* ChangeLog: ... here.
	* po/ca.po: Remove (now handled by TLP).
	* po/id.po: Likewise.
	* po/zh_CN.po: Likewise.
	* Makefile.in (LINGUAS): Initialize in a way that supports
	empty set.

2009-11-27  Robert Millan  <rmh.grub@aybabtu.com>

	* Makefile.in (LINGUAS): Rewrite by scanning po/ directory instead of
	reliing on po/LINGUAS.
	($(foreach lang, $(LINGUAS), $(srcdir)/po/$(lang).po)): Rewrite as ...
	(po/%.po): ... this.

2009-11-26 Felix Zielcke <fzielcke@z-51.de>

	* util/i386/efi/grub-mkimage.c: Include "progname.h".